== 0.1.3 / TBD

* Added ConfigFile#save_credentials

== 0.1.2 2009-09-10
* Documentation updated
* Fixed dependency definitions in Rakefile

== 0.1.0 2009-09-08

* 1 major enhancement:
  * Initial release