@@ -1,0 +1,10 @@
+#!/usr/bin/env ruby
+#
+#  Created on 2009-9-18.
+#  Copyright (c) 2009. All rights reserved.
+
+require 'rubygems'
+require File.expand_path(File.dirname(__FILE__) + "/../lib/codefumes")
+require "lib/store_codefumes_credentials/cli"
+
+StoreCodefumesCredentials::CLI.execute(STDOUT, ARGV)
